style.css
/* ... */
@media screen and (min-width: 1601px) {
  .hero-heading-text {
    font-size: 96px;
  }

  .hero-text {
    font-size: 26px;
    margin-bottom: 60px;
  }

  .shop-now-btn {
    padding: 27px 42px;
    font-size: 33px;
  }
}

@media screen and (max-width: 1200px) and (min-width: 1001px) {
  /* Navbar links Stylings */

  nav a {
    font-size: 14px;
  }
  .sign-up-btn {
    font-size: 14px;
    padding: 10px 14px;
  }
}

/* Here */

@media screen and (max-width: 1300px) and (min-width: 901px) {
  .new-arrivals-details p {
    font-size: 13px;
  }

  .new-arrivals-details h4 {
    font-size: 19px;
  }

  .arrow {
    padding-left: 23px;
  }
}

@media screen and (max-width: 1450px) and (min-width: 1201px) {
  /* Navbar links Stylings */

  nav a {
    font-size: 18px;
  }
  .sign-up-btn {
    font-size: 18px;
    padding: 13px 17px;
  }
}

@media screen and (min-width: 720px) {
  .logo-wrapper {
    width: 100%;
  }

  .hero-right-part {
    position: relative;
    aspect-ratio: 1;
  }

  .hero-girl-img {
    height: auto;
    width: 100%;
    aspect-ratio: 1;
  }

  .shop-now-btn-wrapper {
    margin: 0;
    padding-bottom: 5rem;
  }
}

@media screen and (max-width: 400px) and (min-width: 300px) {
  .skewed-white-bg {
    padding: 0 78px 0 25px;
  }

  .skewed-orange-bg {
    padding: 0 75px 0 25px;
  }
}

/* Mobile Stylings */

@media screen and (max-width: 767px) {
  .container {
    padding: 0 0.75rem;
  }

  /* Hero Mobile Stylings */

  .hero-wrapper {
    flex-direction: column;
    padding: 0.5rem 12px;
    justify-content: center;
    align-items: center;
    border-radius: 15px;
    margin-top: 15px;
  }

  .hero-heading-text {
    font-size: 12vw;
    text-align: center;
  }

  .hero-text {
    font-size: 4vw;
    text-align: center;
  }

  .shop-now-btn-wrapper {
    text-align: center;
    font-size: 4vw;
    margin-top: 46px;
  }

  .shop-now-btn {
    padding: 10px 18px;
    font-size: 25px;
  }

  .hero-right-part {
    margin: 0;
    display: flex;
  }

  .hero-girl-img {
    width: 100%;
  }
  .hero-right-part {
    position: relative;
    aspect-ratio: 1;
    order: 1;
  }

  .hero-left-part {
    padding-top: 5rem;
    padding-bottom: 1rem;
    order: 2;
  }

  .hero-girl-img {
    width: 100%;
    height: auto;
  }

  .logo-wrapper {
    display: flex;
    align-items: center;
    justify-content: space-between;
    width: 100%;
  }

  .logo-wrapper img {
    width: 50%;
  }

  /* Navbar Mobile Stylings */
  nav {
    flex-direction: column;
    align-items: center;
    justify-content: center;
  }

  nav ul {
    max-height: 0;
    opacity: 0;
    overflow: hidden;
    flex-direction: column;
    position: relative;
    background-color: #e6c744;
    width: 100%;
    padding: 0;
    transition: max-height 0.3s ease, opacity 0.3s ease, padding 0.3s ease;
  }

  nav a {
    color: black;
    font-size: 18px;
  }

  nav ul.active {
    max-height: 400px;
    opacity: 1;
    width: 100%;
    padding: 1.5rem 0;
  }

  .hamburger-menu {
    display: block;
    cursor: pointer;
  }

  .hamburger-menu i {
    font-size: 24px;
    color: #000;
  }
  nav li {
    margin-bottom: 16px;
  }

  .sign-up-btn {
    background: #000000;
    display: inline-block;
    color: #fefefe;
    border-radius: 7px;
    padding: 10px 10px;
    margin-top: 4px;
    font-size: 18px;
  }

  /* Brands Slider Stylings */

  .splide__list img {
    width: 40%;
  }

  /* New Arrivals Stylings */

  .new-arrivals-product-wrapper {
    flex-direction: column;
    align-items: center;
    gap: 1rem;
  }

  .new-arrivals-section-title {
    font-size: 23px;
  }

  .new-arrivals-vector-img {
    position: absolute;
    top: 9px;
    left: 28px;
    z-index: 1;
  }

  .new-arrivals-details h4 {
    margin: 0;
    padding: 0;
    font-weight: 500;
    font-size: 5vw;
  }

  .new-arrivals-details p {
    margin: 0;
    padding: 0;
    color: #7f7f7f;
    font-size: 4w;
  }

  /* Sale Now Stylings */
  .sale-now {
    flex-direction: column;
    gap: 6rem;
    padding-right: 0;
  }

  .sale-now .right-part-wrapper h2 {
    font-size: 16vw;
    text-align: center;
  }
  .sale-now-text {
    font-size: 4vw;
    text-align: center;
  }

  .sale-now-terms-and-conditions-wrapper {
    font-size: 4vw;
    text-align: center;
  }

  .shop-now-btn-wrapper {
    text-align: center;
    margin-top: 7px;
    padding-bottom: 3rem;
  }

  .pay-day-shop-now-btn {
    padding: 3vw 6vw;
    font-size: 3vw;
  }

  /* Youngs Favorite Styling */

  .youngs-favorite-product-wrapper {
    flex-direction: column;
    align-items: center;
    gap: 1rem;
  }

  .youngs-favorite-section-title {
    font-size: 23px;
  }

  .youngs-favorite-vector-img {
    top: 4px;
    left: 50px;
  }

  /* Download App Sections */
  .download-app {
    flex-direction: column;
  }

  .download-app-buttons {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 1rem;
  }

  .download-app-buttons img {
    width: 50%;
  }

  .download-app-heading-text {
    font-size: 22px;
    text-align: center;
  }

  .download-app-text {
    font-size: 16px;
    color: #7c7c7c;
    text-align: center;
    margin-bottom: 36px;
  }
}

/* end */

